<resources>
    <string name="app_name" translatable="false">Udontknow</string>
    <string name="action_search">action_search</string>

    <string name="loading">loading</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="user_label">Label</string>
    <string name="user_id" translatable="false">ID</string>
    <string name="user_name">Name</string>
    <string name="user_password">Password</string>
    <string name="user_email">E-mail</string>
    <string name="user_phone">Phone</string>
    <string name="user_binding">Binding</string>
    <string name="user_website">Website</string>
    <string name="user_remark">Remark</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_editor">EditorActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_address" translatable="false">vision.lsm.2012@gmail.com</string>
    <string name="share">Share</string>
    <string name="check4updates">Check for updates</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>

    <string name="had_new_version">Had new version</string>
    <string name="no_new_version">No new version</string>
    <string name="update">Update</string>
    <string name="start_download">Start download</string>

    <string name="text_input_password">Input password:</string>
    <string name="btn_confirm">Confirm</string>
    <string name="wrong_password">wrong password</string>

</resources>
